JumpScript/tests/baselines/reference/parserIfStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserIfStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserIfStatement1.d.jump(1,5): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserIfStatement1.d.jump (2 errors) ====
    if (foo) {
    ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        ~~~
!!! error TS2304: Cannot find name 'foo'.
    }